@@ -24,6 +24,7 @@ Current Devel
 	- NickServ: Re-identify users when possible after restarting.
 	- Protocols: Update the accountname in memory when changing the accountname on the IRCd.
 	- Protocols: Delete a user's data from memory when KILLed by services.
+	- Protocols: Delete a server's data as well as the data of it's users when SQUIT'd by services.
 
 1.0.0-alpha1
 	- InspIRCd: Join after the ircd is done bursting to us
